[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "livekit"

[tool.black]
target-version = ["py37"]
exclude = "/(protocol|env|[.]tox|[.]pytest_cache)"

[tool.isort]
profile = "black"
skip = ["protocol", "env", ".tox", ".pytest_cache"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39
isolated_build = true

[testenv]
deps = pytest
commands = pytest
"""

[project]
name = "livekit-server-sdk-python"
authors = [{name = "Tradable Bits", email = "dev@tradablebits.com"}]
readme = "README.md"
licence = {file = "LICENCE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "description"]
requires-python = ">=3.7,<4"
dependencies = [
    "pyjwt >= 2.0.0, < 3.0",
    "twirp >= 0.0.5, < 1.0",
]

[project.urls]
Home = "https://github.com/tradablebits/livekit-server-sdk-python"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "isort",
    "pytest",
    "pytest-coverage",
]
