[metadata]
name = livekit-server-sdk-python
version = 0.2.4
author = Tradable Bits
author_email = dev@tradablebits.com
description = Livekit Server SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tradablebits/livekit-server-sdk-python
project_urls =
    Bug Tracker = https://github.com/tradablebits/livekit-server-sdk-python/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = livekit
python_requires = >=3.7
install_requires =
    pyjwt >=2.0.0,<3.0.0
    twirp >=0.0.5,<0.1.0

[options.extras_require]
dev =
    black
    build
    coverage
    isort
    pytest
    pytest-cov
    twine
