[metadata]
name = livekit_server_sdk_python
version = 0.3.2
description = Livekit Server SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tradablebits/livekit-server-sdk-python
author = Tradable Bits
author_email = dev@tradablebits.com
license = Apache-2.0
license_file = LICENCE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/tradablebits/livekit-server-sdk-python/issues

[options]
packages = find:
install_requires =
    pyjwt>=2.0.0,<3.0.0
    twirp>=0.0.5,<0.1.0
python_requires = >=3.7

[options.package_data]
* = *.pyi

[options.extras_require]
dev =
    black
    build
    coverage
    isort
    pytest
    pytest-cov
    twine
